--- a/style/signupStyle.css
+++ b/style/signupStyle.css
@@ -32,7 +32,7 @@ input, .button-to-signup{
     color: white;
     border: 1px solid green;
     box-shadow: 0px 0px 10px #00000019;
-    margin: 40px;
+    margin-top: 20px;
     text-align: center;
     cursor: pointer;
 }
@@ -42,10 +42,43 @@ input, .button-to-signup{
 }
 
 .link-to-login{
-    margin: 20px;
+    margin: 30px;
 }
 
 .link-to-login:hover{
     text-decoration: underline;
+}
+
+.same-line{
+    margin: 10px;
+}
+
+.radio-input, .check-input{ 
+    width: auto;
+}
+
+#date-label{
+    margin-top: 20px;
+    text-align: left;
+}
+
+#radio-same-line{
+    display: flex;
+}
+
+#check-same-line{
+    margin-top: 30px;
+}
+
+.space-between{
+    margin: 0px 20px;
+}
+
+.red-incorrect{
+    font-size: 20px;
+    color: red;
+    display: none;
+    align-items: center;
+    margin-top: 30px;
 }
 
